--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
             color: black;
             font-family: Arial, sans-serif;
         }
-        .threejs-container {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
@@ -37,46 +32,58 @@
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
-    <!-- Контейнеры для каждой модели -->
-    <div class="threejs-container" id="threejs-container1"></div>
-    <div class="threejs-container" id="threejs-container2"></div>
-    <div class="threejs-container" id="threejs-container3"></div>
-    
     <script>
-        // Функция для инициализации сцены для каждой модели
-        function initThree(containerId, modelFile, position, scaleFactor) {
-            const container = document.getElementById(containerId);
+        // Создаем сцену, камеру и рендерер
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.set(0, 5, 0);
+        camera.lookAt(0, 0, 0);
 
-            const scene = new THREE.Scene();
-            const camera = new THREE.PerspectiveCamera(45, container.clientWidth / container.clientHeight, 0.1, 1000);
-            camera.position.set(0, 5, 0);
-            camera.lookAt(0, 0, 0);
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.setPixelRatio(window.devicePixelRatio); // Устанавливаем плотность пикселей для улучшения качества
+        document.body.appendChild(renderer.domElement);
 
-            const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            renderer.setPixelRatio(window.devicePixelRatio); // Это улучшит качество для экранов с высокой плотностью пикселей
-            document.body.appendChild(renderer.domElement);
+        // Улучшаем качество рендеринга
+        renderer.toneMapping = THREE.ACESFilmicToneMapping;
+        renderer.toneMappingExposure = 1;
+        renderer.gammaFactor = 2.2; // Улучшаем гамму для более ярких цветов
 
+        const controls = new THREE.OrbitControls(camera, renderer.domElement);
+        controls.enableDamping = true;
+        controls.dampingFactor = 0;
+        controls.rotateSpeed = 0.5;
+        controls.enableZoom = false;
 
-            const controls = new THREE.OrbitControls(camera, renderer.domElement);
-            controls.enableDamping = true;
-            controls.dampingFactor = 0;
-            controls.rotateSpeed = 0.5;
-            controls.enableZoom = false;
+        const ambientLight = new THREE.AmbientLight(0xffffff, 2);
+        scene.add(ambientLight);
 
-            const ambientLight = new THREE.AmbientLight(0xffffff, 2);
-            scene.add(ambientLight);
+        const pointLight = new THREE.PointLight(0xddfcad, 10);
+        pointLight.position.set(0, 0, 0);
+        scene.add(pointLight);
 
-            const pointLight = new THREE.PointLight(0xddfcad, 10);
-            pointLight.position.set(0, 0, 0);
-            scene.add(pointLight);
+        // Миксеры для анимации
+        let mixers = [];
 
-            let mixer;
-            const loader = new THREE.GLTFLoader();
+        // Функция масштабирования моделей
+        function scaleModel(model, scaleFactor) {
+            model.scale.set(scaleFactor, scaleFactor, scaleFactor);
+        }
 
+        // Загрузка и добавление моделей
+        const loader = new THREE.GLTFLoader();
+
+        const models = ['untitled.glb', 'untitled2.glb', 'untitled3.glb'];
+        const positions = [
+            { x: 0.2, y: 0, z: 0, scale: 0.35 },
+            { x: -3, y: 0, z: 0, scale: 0.9 },
+            { x: 3, y: 0, z: 0, scale: 1 }
+        ];
+
+        models.forEach((modelFile, index) => {
             loader.load(`models/${modelFile}`, function(glb) {
                 const model = glb.scene;
-                mixer = new THREE.AnimationMixer(model);
+                const mixer = new THREE.AnimationMixer(model);
 
                 // Добавляем анимации
                 glb.animations.forEach((clip) => {
@@ -86,27 +93,29 @@
                 });
 
                 // Устанавливаем позицию и масштаб модели
-                model.position.set(position.x, position.y, position.z);
-                model.scale.set(scaleFactor, scaleFactor, scaleFactor);
+                model.position.set(positions[index].x, positions[index].y, positions[index].z);
+                scaleModel(model, positions[index].scale);
                 scene.add(model);
+
+                // Добавляем миксер в массив для обновления анимаций
+                mixers.push(mixer);
             }, undefined, function(error) {
                 console.error(`Ошибка при загрузке ${modelFile}: `, error);
             });
+        });
 
-            function animate() {
-                requestAnimationFrame(animate);
-                if (mixer) mixer.update(0.016);
-                controls.update();
-                renderer.render(scene, camera);
-            }
+        // Функция анимации
+        function animate() {
+            requestAnimationFrame(animate);
 
-            animate();
+            // Обновление миксеров
+            mixers.forEach(mixer => mixer.update(0.016));
+
+            controls.update();
+            renderer.render(scene, camera);
         }
 
-        // Инициализация для каждой модели
-        initThree('threejs-container1', 'untitled.glb', { x: 0.2, y: 0, z: 0 }, 0.35);
-        initThree('threejs-container2', 'untitled2.glb', { x: -3, y: 0, z: 0 }, 0.9);
-        initThree('threejs-container3', 'untitled3.glb', { x: 3, y: 0, z: 0 }, 1);
+        animate();
     </script>
 </body>
 </html>
