--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         // Улучшаем качество рендеринга
         renderer.toneMapping = THREE.ACESFilmicToneMapping;
         renderer.toneMappingExposure = 1;
-        renderer.gammaFactor = 5; // Улучшаем гамму для более ярких цветов
+        renderer.gammaFactor = 2.2; // Улучшаем гамму для более ярких цветов
 
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
         controls.enableDamping = true;
@@ -55,12 +55,22 @@
         controls.rotateSpeed = 0.5;
         controls.enableZoom = false;
 
-        const ambientLight = new THREE.AmbientLight(0xffffff, 2);
+        // Освещение сцены
+        const ambientLight = new THREE.AmbientLight(0xffffff, 1); // Уменьшено для мягкого освещения
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xddfcad, 10);
-        pointLight.position.set(0, 0, 0);
-        scene.add(pointLight);
+        // Добавим дополнительные источники света
+        const pointLight1 = new THREE.PointLight(0xddfcad, 3, 100); // Усиленное освещение для лучшего восприятия
+        pointLight1.position.set(5, 5, 5); // Расположение в углу
+        scene.add(pointLight1);
+
+        const pointLight2 = new THREE.PointLight(0xddfcad, 3, 100);
+        pointLight2.position.set(-5, -5, 5); // Другой угол
+        scene.add(pointLight2);
+
+        const pointLight3 = new THREE.PointLight(0xffffff, 5, 50);
+        pointLight3.position.set(0, 5, -5); // Источник света сверху
+        scene.add(pointLight3);
 
         // Миксеры для анимации
         let mixers = [];
