--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         controls.enableZoom = false;
 
         // Мягкий свет
-        const ambientLight = new THREE.AmbientLight(0xffffff, 1); 
+        const ambientLight = new THREE.AmbientLight(0xffffff, 1.5); // увеличено освещение
         scene.add(ambientLight);
 
         // Направленный свет
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 1.5);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 2);
         directionalLight.position.set(5, 5, 5);
         scene.add(directionalLight);
 
@@ -71,7 +71,7 @@
         scene.add(pointLight);
 
         // SpotLight для более сфокусированных бликов
-        const spotLight = new THREE.SpotLight(0xffffff, 2, 10, Math.PI / 6, 0.25, 1);
+        const spotLight = new THREE.SpotLight(0xffffff, 1, 10, Math.PI / 6, 0.25, 1);
         spotLight.position.set(0, 2, 3);
         scene.add(spotLight);
 
